cmake_minimum_required(VERSION 3.17)
project(MyDatabase)

set(CMAKE_CXX_STANDARD 14)

add_executable(MyDatabase global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h main.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h storage/rm.h storage/rid.h storage/rm_record.cpp storage/rid.cpp storage/rm_internal.h storage/rm_manager.cpp storage/rm_filehandle.cpp storage/rm_error.h storage/rm_filescan.cpp sql/ddl.h sql/ddl_manager.cpp parser.h storage/rm_varlenattr.cpp storage/attrfilehandle.cpp storage/rm_bitmap.h storage/rm_bitmap.cpp atomic/RWLock.h atomic/RWLock.cpp sql/dml.h sql/dml_manager.cpp)
add_executable(pf_test1 global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h storage/pf_test1.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h atomic/RWLock.h atomic/RWLock.cpp)
add_executable(pf_test2 global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h storage/pf_test2.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h atomic/RWLock.h atomic/RWLock.cpp)
add_executable(rm_test1 global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h storage/rm_test1.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h storage/rm.h storage/rid.h storage/rm_record.cpp storage/rid.cpp storage/rm_internal.h storage/rm_manager.cpp storage/rm_filehandle.cpp storage/rm_error.h storage/rm_filescan.cpp sql/ddl.h sql/ddl_manager.cpp parser.h storage/rm_varlenattr.cpp storage/attrfilehandle.cpp storage/rm_bitmap.h storage/rm_bitmap.cpp atomic/RWLock.h atomic/RWLock.cpp)
add_executable(dbcreate global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h dbcreate.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h storage/rm.h storage/rid.h storage/rm_record.cpp storage/rid.cpp storage/rm_internal.h storage/rm_manager.cpp storage/rm_filehandle.cpp storage/rm_error.h storage/rm_filescan.cpp sql/ddl.h sql/ddl_manager.cpp parser.h storage/rm_varlenattr.cpp storage/attrfilehandle.cpp storage/rm_bitmap.h storage/rm_bitmap.cpp atomic/RWLock.h atomic/RWLock.cpp)
add_executable(playground  sql/dml.h sql/dml_manager.cpp global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h playground.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h storage/rm.h storage/rid.h storage/rm_record.cpp storage/rid.cpp storage/rm_internal.h storage/rm_manager.cpp storage/rm_filehandle.cpp storage/rm_error.h storage/rm_filescan.cpp sql/ddl.h sql/ddl_manager.cpp parser.h storage/rm_varlenattr.cpp storage/attrfilehandle.cpp storage/rm_bitmap.h storage/rm_bitmap.cpp atomic/RWLock.h atomic/RWLock.cpp)
add_executable(hw1_test global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h test/hw1_test.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h storage/rm.h storage/rid.h storage/rm_record.cpp storage/rid.cpp storage/rm_internal.h storage/rm_manager.cpp storage/rm_filehandle.cpp storage/rm_error.h storage/rm_filescan.cpp sql/ddl.h sql/ddl_manager.cpp parser.h storage/rm_varlenattr.cpp storage/attrfilehandle.cpp storage/rm_bitmap.h storage/rm_bitmap.cpp atomic/RWLock.h atomic/RWLock.cpp)
add_executable(concurrent_test test/concurrent_test.cpp atomic/RWLock.h atomic/RWLock.cpp storage/bufhashtable.h storage/bufhashtable.cpp)
add_executable(dml_test sql/dml.h sql/dml_manager.cpp global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h test/sql_test.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h storage/rm.h storage/rid.h storage/rm_record.cpp storage/rid.cpp storage/rm_internal.h storage/rm_manager.cpp storage/rm_filehandle.cpp storage/rm_error.h storage/rm_filescan.cpp sql/ddl.h sql/ddl_manager.cpp parser.h storage/rm_varlenattr.cpp storage/attrfilehandle.cpp storage/rm_bitmap.h storage/rm_bitmap.cpp atomic/RWLock.h atomic/RWLock.cpp)

