cmake_minimum_required(VERSION 3.17)
project(MyDatabase)

set(CMAKE_CXX_STANDARD 14)

add_executable(MyDatabase global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h main.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h storage/rm.h storage/rid.h storage/rm_record.cpp storage/rid.cpp storage/rm_internal.h storage/rm_manager.cpp storage/rm_filehandle.cpp storage/rm_error.h storage/rm_filescan.cpp sql/ddl.h sql/ddl_manager.cpp parser.h storage/rm_varlenattr.cpp storage/attrfilehandle.cpp storage/rm_bitmap.h storage/rm_bitmap.cpp atomic/RWLock.h atomic/RWLock.cpp sql/dml.h sql/dml_manager.cpp storage/ix.h storage/ix_indexhandle.cpp storage/ix_internal.h storage/ix_indexscan.cpp error_message/rm_error.h error_message/pf_error.h error_message/ix_error.h error_message/ddl_error.h error_message/dml_error.h error_message/all_error.h)
add_executable(pf_test1 global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h storage/pf_test1.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h atomic/RWLock.h atomic/RWLock.cpp)
add_executable(pf_test2 global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h storage/pf_test2.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h atomic/RWLock.h atomic/RWLock.cpp)
add_executable(rm_test1 global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h storage/rm_test1.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h storage/rm.h storage/rid.h storage/rm_record.cpp storage/rid.cpp storage/rm_internal.h storage/rm_manager.cpp storage/rm_filehandle.cpp storage/rm_error.h storage/rm_filescan.cpp sql/ddl.h sql/ddl_manager.cpp parser.h storage/rm_varlenattr.cpp storage/attrfilehandle.cpp storage/rm_bitmap.h storage/rm_bitmap.cpp atomic/RWLock.h atomic/RWLock.cpp storage/ix.h storage/ix_manager.cpp storage/ix_indexhandle.cpp storage/ix_indexscan.cpp storage/ix_internal.h)
add_executable(dbcreate global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h dbcreate.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h storage/rm.h storage/rid.h storage/rm_record.cpp storage/rid.cpp storage/rm_internal.h storage/rm_manager.cpp storage/rm_filehandle.cpp storage/rm_error.h storage/rm_filescan.cpp sql/ddl.h sql/ddl_manager.cpp parser.h storage/rm_varlenattr.cpp storage/attrfilehandle.cpp storage/rm_bitmap.h storage/rm_bitmap.cpp atomic/RWLock.h atomic/RWLock.cpp storage/ix_manager.cpp)
add_executable(hw1_test global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h test/hw1_test.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h storage/rm.h storage/rid.h storage/rm_record.cpp storage/rid.cpp storage/rm_internal.h storage/rm_manager.cpp storage/rm_filehandle.cpp storage/rm_error.h storage/rm_filescan.cpp sql/ddl.h sql/ddl_manager.cpp parser.h storage/rm_varlenattr.cpp storage/attrfilehandle.cpp storage/rm_bitmap.h storage/rm_bitmap.cpp atomic/RWLock.h atomic/RWLock.cpp error_message/rm_error.h error_message/pf_error.h error_message/ix_error.h error_message/ddl_error.h error_message/dml_error.h error_message/all_error.h)
add_executable(concurrent_test test/concurrent_test.cpp atomic/RWLock.h atomic/RWLock.cpp storage/bufhashtable.h storage/bufhashtable.cpp error_message/rm_error.h error_message/pf_error.h error_message/ix_error.h error_message/ddl_error.h error_message/dml_error.h error_message/all_error.h)
add_executable(sql_test sql/dml.h sql/dml_manager.cpp global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h test/sql_test.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h storage/rm.h storage/rid.h storage/rm_record.cpp storage/rid.cpp storage/rm_internal.h storage/rm_manager.cpp storage/rm_filehandle.cpp storage/rm_error.h storage/rm_filescan.cpp sql/ddl.h sql/ddl_manager.cpp parser.h storage/rm_varlenattr.cpp storage/attrfilehandle.cpp storage/rm_bitmap.h storage/rm_bitmap.cpp atomic/RWLock.h atomic/RWLock.cpp storage/ix.h storage/ix_manager.cpp storage/ix_indexhandle.cpp storage/ix_indexscan.cpp storage/ix_internal.h)
add_executable(index_test global.h storage/pf.h storage/bufmgr.h storage/pf_internal.h storage/bufhashtable.h test/index_test.cpp storage/pf_manager.cpp storage/bufhashtable.cpp storage/bufmgr.cpp storage/pf_filehandle.cpp storage/pagehandle.cpp storage/pf_error.h storage/rm.h storage/rid.h storage/rm_record.cpp storage/rid.cpp storage/rm_internal.h storage/rm_manager.cpp storage/rm_filehandle.cpp storage/rm_error.h storage/rm_filescan.cpp sql/ddl.h sql/ddl_manager.cpp parser.h storage/rm_varlenattr.cpp storage/attrfilehandle.cpp storage/rm_bitmap.h storage/rm_bitmap.cpp atomic/RWLock.h atomic/RWLock.cpp sql/dml.h sql/dml_manager.cpp storage/ix.h storage/ix_indexhandle.cpp storage/ix_internal.h storage/ix_manager.cpp storage/ix_indexscan.cpp error_message/rm_error.h error_message/pf_error.h error_message/ix_error.h error_message/ddl_error.h error_message/dml_error.h error_message/all_error.h)
add_executable(playground playground.cpp)
